security: harden splash screen path validation and add comprehensive tests
Security hardening for SplashScreen-Image extraction:
- Reject absolute paths (e.g., /tmp/splash.png)
- Reject path traversal attempts (e.g., ../../../etc/passwd)
- Reject directory entries (must be a file)
- Validate path is not empty or whitespace
- Normalize backslashes to forward slashes for Windows compatibility

New unit tests:
- KeyValueTest: Tests for the split('=', 2) fix that enables values
  containing '=' signs (e.g., Add-Reads=mod1=mod2)
- testSplashScreenPathTraversal: Verifies path traversal rejection
- testSplashScreenAbsolutePath: Verifies absolute path rejection
- testSplashScreenEmptyPath: Verifies empty path handling
- testSplashScreenCaching: Verifies no re-extraction when jar unchanged
  and re-extraction when jar is modified
- testAddReadsMalformed: Verifies proper handling of extra whitespace

All security validations fail gracefully with warnings rather than
throwing exceptions, maintaining backward compatibility.

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>